Fixed issue with logo on small devices

--- a/public/css/app.less
+++ b/public/css/app.less
@@ -134,9 +134,6 @@ ul.nav {
 		border:none;
 	}
 }
-#main {
-	padding:5px;
-}
 // Drop down menu for small screens
 @media (max-width:768px) {
 	nav.navbar .menu {
@@ -178,8 +175,8 @@ ul.nav {
 		padding-left:0px;
 		padding-right:0px;
 	}
-	.navbar-brand {
-		margin:4px 0 0 8px;
+	a.navbar-brand {
+		margin:4px 0 0 15px;
 	}
 	ul.nav li {
 		margin-left:0px;
